syntax = "proto3";

package common;

option java_multiple_files = true;
option java_package = "com.clibing.common";

/**
 * 通用状态
 */
message CommonStatus {
    int32 code = 1; // 状态码
    string message = 2; // 描述信息
}

/**
 * 通用状态码
 */
enum CommonCode {
    UNKNOWN_COMMON_CODE = 0; // 保留位

    REQUEST_SUCCESS = 200; // 请求成功
    ILLEGAL_USER = 401;  // 非法用户
    USER_BLACKED = 402;  // 被拉黑
    RESOURCE_NOT_FOUND = 403; // 资源没有找到
    REQUEST_PARAMETER_ERROR = 404; // 请求参数异常
    SERVER_ERROR = 500; // 服务级别错误
    CONVERT_ENUM_ERROR = 501; // 转换 从IEnum.getValue()->enum异常
}

/**
 * 分页数据
 */
message Paging {
    int32 pageNumber = 1;
    int32 pageSize = 2;
    string pageToken = 3;
    string search = 4; // 搜索的内容, ""不进行搜索
    int32 total = 5; // 总记录数
}

/**
 * 空请求
 */
message EmptyRequest {
}

/**
 * 只含有一个值
 */
message SingleRequest {
    string value = 1; // 只含有一个值
}

/**
 * 只有返回状态
 */
message SingleResponse {
    CommonStatus status = 1; // 状态
}

/**
 * 健康检查restful响应
 */
message HealthResponse {
    CommonStatus status = 1; // 状态
    Data data = 2; // 具体的数据
    /**
     * 必修定义为内部的Data不能定义到外面，不允许存在重复的message
     */
    message Data {
        string applicationName = 1; // 应用的名字
        int64 timestamp = 2; // 时间戳
        map<string, string> attribute = 3; // 扩展属性
    }
}